# ai-java-student-materials

Assignments/Ex1 - Fundamentals of AI/Docs/: Output - Linked List.txt  Output - Wumpus World.txt
Assignments/Ex1 - Fundamentals of AI/Source/: CMakeLists.txt  license.txt
Assignments/Ex1 - Fundamentals of AI/Source/LinkedList/: CMakeLists.txt  ListMain.java
Assignments/Ex1 - Fundamentals of AI/Source/WumpusWorld/: Agent.java  Behavior.java  CMakeLists.txt  Game.java  World.java
Assignments/Ex1 - Fundamentals of AI/Source/WumpusWorld/behaviors/: CheckForGold.java  DebugKnowledge.java  ExploreDirection.java  PickUpGold.java  ProcessPercepts.java  Selector.java  Sequence.java  ShootWumpus.java  TestBehavior.java
Assignments/Ex1 - Fundamentals of AI/Source/ai_structures/: LinkedList.java  TreeNode.java
Lecture Slides/: AI-TUJ-0B - Game Design Fundamentals.pptx
